tests/fixtures/negative/empty_op_args.nfl
# NEGATIVE: linear[] with empty bracket on line 6.
# Expected: ParseError mentioning 'argument' or 'empty' at line 6.

model X [batch=8]:
    x: Tensor[batch, 4]
    x -> linear[]
